# ForgeCAD

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
apps/desktop/: README.md
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/ui/: index.html  main.js  styles.css
docs/adr/: ADR-001-rust-first.md  ADR-002-occt-backend.md
docs/api/: agent.md
docs/architecture/: design-graph.md  feature-modeling.md  geometry-kernel.md  ocad-format.md  overview.md  solver.md
docs/assets/: generate.sh
docs/developer-guide/: desktop-ui.md  index.md  occt-install.md  preview-assets.md
docs/examples/: patterns.md
examples/: README.md
examples/agent/: diff_document_request.json  explain_request.json  export_request.json  patch_dry_run_request.json  pick_document_request.json  query_face_groups_request.json  query_overlay_lines_request.json  query_request.json  query_semantic_ref_request.json  query_sketch_constraints_request.json  regen_request.json
examples/bracket.ocad.d/: checksums.json  document.ocad.json
examples/bracket.ocad.d/graph/: features.json
examples/bracket_face_pin.ocad.d/: checksums.json  document.ocad.json  manifest.ocad.json
examples/bracket_face_pin.ocad.d/graph/: constraints.json  features.json  sketches.json
examples/bracket_hole_row.ocad.d/: checksums.json  document.ocad.json  manifest.ocad.json
examples/bracket_hole_row.ocad.d/graph/: features.json
examples/bracket_pin_mirror.ocad.d/: checksums.json
examples/bracket_pin_mirror.ocad.d/graph/: features.json
examples/bracket_pin_ring.ocad.d/: checksums.json  document.ocad.json  manifest.ocad.json
examples/bracket_pin_ring.ocad.d/graph/: features.json  sketches.json
examples/bracket_pin_row.ocad.d/: checksums.json
examples/bracket_pin_row.ocad.d/graph/: features.json
examples/revolve_bushing.ocad.d/: checksums.json  document.ocad.json  manifest.ocad.json
examples/revolve_bushing.ocad.d/graph/: features.json  parameters.json  sketches.json
examples/revolve_sector.ocad.d/: checksums.json
examples/revolve_sector.ocad.d/graph/: parameters.json
fixtures/golden/: bracket_with_hole.json  bracket_with_top_chamfer.json  bracket_with_top_fillet.json
modules/ai/: Cargo.toml
modules/ai/src/: agent_api.rs  explain.rs  intent.rs  lib.rs  patch.rs  query.rs  state.rs  validation.rs
modules/assembly/: Cargo.toml
modules/assembly/src/: component.rs  connector.rs  instance.rs  lib.rs  mate.rs  solve.rs
modules/cli/: Cargo.toml
modules/cli/src/: agent.rs  commands.rs  diff.rs  export.rs  main.rs  mesh.rs  new.rs  patch.rs  pick.rs  regen.rs  scene_query.rs  topo_sync.rs  validate.rs  view.rs
modules/cli/tests/: example_documents.rs  golden_pipeline.rs  golden_pipeline_chamfer.rs  (+1 more)
modules/core/: Cargo.toml
modules/core/src/: document.rs  error.rs  id.rs  lib.rs  manifest.rs  serialize.rs  transaction.rs  units.rs  validation.rs
modules/drawing/: Cargo.toml
modules/drawing/src/: dimension.rs  export_svg.rs  hidden_line.rs  lib.rs  sheet.rs  view.rs
modules/feature/: Cargo.toml
modules/feature/src/: chamfer.rs  extrude.rs  face_discover.rs  feature.rs  fillet.rs  hole.rs  lib.rs  param_apply.rs  pattern.rs  regenerate.rs  registry.rs  revolve.rs  sketch_bridge.rs  sketch_feature.rs  topo_resolve.rs
modules/feature/tests/: golden_bracket.rs  golden_chamfer.rs  golden_fillet.rs  measure_fixture.rs  occt_regen.rs
modules/feature/tests/support/: golden.rs
modules/file/: Cargo.toml
modules/geometry/: Cargo.toml
modules/geometry/src/: brep.rs  kernel.rs  lib.rs  mass.rs  nurbs.rs  refs.rs  stl.rs  tessellation.rs  topo_sync.rs  topology.rs
modules/graph/: Cargo.toml
modules/kernel-occt/: Cargo.toml
modules/kernel-occt/src/: backend.rs  convert.rs  ffi.rs  lib.rs  store.rs
modules/plugin-api/: Cargo.toml
modules/plugin-api/src/: exporter.rs  feature_plugin.rs  importer.rs  lib.rs  ui_extension.rs
modules/render/: Cargo.toml
modules/render/src/: camera.rs  edges.rs  face_catalog.rs  lib.rs  mesh.rs  overlay.rs  png.rs  scene.rs  selection.rs  solid.rs  stroke_font.rs  viewport.rs  wgpu_renderer.rs
modules/sketch/: Cargo.toml
modules/sketch/src/: constraint.rs  dimension.rs  entity.rs  lib.rs  profile.rs  solve.rs  solve_state.rs  workplane.rs
modules/solver/: Cargo.toml
schemas/: ocad.document.schema.json
tools/: install_occt.sh
(+36 files in other folders)
