[package]
name = "opencad-assembly"
description = "Assembly component instances and mates"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
opencad-core = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
