[package]
name = "opencad-drawing"
description = "2D drawing documents with model references"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
opencad-core = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
