[package]
name = "opencad-feature"
description = "Parametric feature definitions and regeneration"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
opencad-core = { workspace = true }
opencad-geometry = { workspace = true }
opencad-graph = { workspace = true }
opencad-sketch = { workspace = true }
opencad-solver = { workspace = true }
serde = { workspace = true }
indexmap = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
opencad-ai = { workspace = true }
opencad-kernel-occt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
