[package]
name = "opencad-sketch"
description = "2D sketch entities, constraints, and profiles"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
opencad-core = { workspace = true }
opencad-solver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
